[package]
name = "from7zbson"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seven_zip = { git = "https://github.com/ThomFox/seven_zip.git", rev = "69c57bb9846b2dfe58b651287d5aa0dcf1895aec" }
#seven_zip = { path = "../seven_zip" }
bson = { version = "2.6.1" }
serde_json = "1.0.96"
serde = "1.0.163"
thiserror = "1.0.44"
